# nmrkit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
context/: README.md  TODO-joint-multiframe-tracking.md  TODO-soft-kinetic-clustering.md
examples/: validate_dataset.py
native/: README.md
src/nmrkit/: __init__.py
src/nmrkit/dosy/: __init__.py  fit.py
src/nmrkit/io/: __init__.py  nmr.py
src/nmrkit/kinetics/: __init__.py  nmf.py  refine_with_dosy.py
src/nmrkit/peaks/: __init__.py  detect.py  track.py
src/nmrkit/viz/: __init__.py  plot.py
tests/: conftest.py  test_dosy.py  test_io.py  test_kinetics.py  test_peaks_detect.py  test_peaks_track.py  test_smoke.py  test_viz.py
tests/fixtures/: build_synthetic_timeseries.py
tests/fixtures/synthetic_timeseries/spec_001/: acqus
tests/fixtures/synthetic_timeseries/spec_001/pdata/1/: 2rr
tests/fixtures/synthetic_timeseries/spec_002/: acqu2s  acqus
tests/fixtures/synthetic_timeseries/spec_002/pdata/1/: 2rr  procs
tests/fixtures/synthetic_timeseries/spec_003/: acqus
tests/fixtures/synthetic_timeseries/spec_003/pdata/1/: 2rr  proc2s
