[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmrkit"
version = "0.1.0"
description = "General-purpose NMR processing toolkit (time-resolved 2D kinetics, and future modules)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "nmrglue>=0.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "commitizen>=3.29",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/nmrkit"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "src"
packages = ["nmrkit"]

[[tool.mypy.overrides]]
module = "nmrglue.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=nmrkit --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/nmrkit/__init__.py:__version__",
]
